--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -1,1 +1,25 @@
 <search />
+<view class="careList">
+  <view class="left">
+    <block wx:for="{{cateData}}" wx:key="cat_id">
+      <view class="left-nav {{item.cat_id == items.cat_id?'active':''}} " data-index="{{index}}" bindtap="navtap">
+        {{item.cat_name}}
+      </view>
+    </block>
+  </view>
+  <view class="right">
+    <block wx:for="{{items.children}}" wx:key="cat_id" wx:for-item="v">
+      <view class="right-title">
+        /
+        <text>{{v.cat_name}}</text>
+        /
+      </view>
+      <view class="right-body">
+        <view wx:for="{{v.children}}" class="body-list" wx:key="cat_id" wx:for-item="i">
+          <image class="img" src="{{i.cat_icon}}" />
+          <view>曲面电视</view>
+        </view>
+      </view>
+    </block>
+  </view>
+</view>
