--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -6,7 +6,7 @@
 .nav {
   height: 164rpx;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   .nav-images {
     width: 128rpx;
@@ -20,8 +20,8 @@
     height: 59rpx;
   }
   .floor-list {
+    //清除浮动
     overflow: hidden;
-
     .list-item {
       float: left;
       height: 188rpx;
