--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -6,7 +6,7 @@
 .nav {
   height: 164rpx;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 .nav .nav-images {
