--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -16,8 +16,16 @@
   align-items: center;
 }
 .careList .left .active {
-  color: #ea4350;
-  border-left: 4rpx solid #ea4350;
+  color: var(--publicColor);
+  position: relative;
+}
+.careList .left .active::before {
+  content: "";
+  width: 4rpx;
+  height: 60%;
+  background-color: currentColor;
+  position: absolute;
+  left: 0;
 }
 .careList .right {
   flex: 1;
@@ -29,19 +37,26 @@
   justify-content: center;
   align-items: center;
   font-size: 30rpx;
-  color: #575757;
+}
+.careList .right .right-title::before,
+.careList .right .right-title::after {
+  content: "/";
+  color: #ccc;
+  padding: 0 10rpx;
 }
 .careList .right .right-body {
   display: flex;
   flex-wrap: wrap;
-  justify-content: start;
-  margin-bottom: 21rpx;
 }
 .careList .right .right-body .body-list {
-  font-size: 25rpx;
-  color: #2e2e2e;
-  margin: 0 35rpx;
-  text-align: center;
+  width: 33.3333%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20rpx;
+  box-sizing: border-box;
+  font-size: 24rpx;
 }
 .careList .right .right-body .img {
   width: 120rpx;
