--- a/pages/goods_list/index.wxss
+++ b/pages/goods_list/index.wxss
@@ -1,1 +1,36 @@
-/* pages/goods_list/index.wxss */
+.nav {
+  display: flex;
+  justify-content: space-around;
+}
+.nav .nav_list {
+  height: 88rpx;
+  line-height: 88rpx;
+  text-align: center;
+  width: 184rpx;
+}
+.nav .active {
+  border-bottom: 3rpx solid var(--publicColor);
+}
+.list {
+  display: flex;
+  margin: 0 26rpx;
+}
+.list .list_img,
+.list .default_img {
+  width: 191rpx;
+  height: 191rpx;
+  margin: 10rpx 0;
+}
+.list .list_right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-left: 29rpx;
+  font-size: 24rpx;
+  color: #434343;
+  padding: 27rpx 0;
+}
+.list .list_right .price {
+  color: var(--publicColor);
+}
