--- a/pages/goods_list/index.less
+++ b/pages/goods_list/index.less
@@ -6,8 +6,10 @@
     line-height: 88rpx;
     text-align: center;
     width: 184rpx;
+    color: #676767;
   }
   .active {
+    color: #3a3a3a;
     border-bottom: 3rpx solid var(--publicColor);
   }
 }
