--- a/pages/goods_list/index.wxss
+++ b/pages/goods_list/index.wxss
@@ -7,8 +7,10 @@
   line-height: 88rpx;
   text-align: center;
   width: 184rpx;
+  color: #676767;
 }
 .nav .active {
+  color: #3a3a3a;
   border-bottom: 3rpx solid var(--publicColor);
 }
 .list {
