--- a/pages/category/index.wxml
+++ b/pages/category/index.wxml
@@ -14,7 +14,7 @@
       <view class="right-title">{{item.cat_name}}</view>
       <view class="right-body">
         <view wx:for="{{item.children}}" class="body-list" wx:key="cat_id" wx:for-item="v">
-          <navigator url="/pages/goods_list/index?cid={{item.cat_id}}">
+          <navigator url="/pages/goods_list/index?cid={{v.cat_id}}">
             <image class="img" src="{{v.cat_icon}}" />
             <view>{{v.cat_name}}</view>
           </navigator>
