--- a/pages/goods_detail/index.wxss
+++ b/pages/goods_detail/index.wxss
@@ -1,1 +1,87 @@
-/* pages/goods_detail/index.wxss */
+.slider {
+  height: 750rpx;
+}
+.slider .slider-images {
+  width: 100%;
+  height: 750rpx;
+}
+.price {
+  display: flex;
+  justify-content: space-between;
+  padding: 19rpx 37rpx;
+}
+.price .price_left {
+  color: var(--publicColor);
+  font-size: 36rpx;
+}
+.price .price_right .icon-icon-test,
+.price .price_right .icon-shoucang {
+  color: #707070;
+  font-size: 60rpx;
+}
+.price .price_right .icon-shoucang {
+  margin-left: 46rpx;
+}
+.title {
+  padding: 0 33rpx;
+  font-size: 30rpx;
+  color: #434343;
+  line-height: 42rpx;
+  height: 84rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* 这是一个以前的弹性盒子 */
+  display: -webkit-box;
+  /* 在哪一行显示省略号 */
+  -webkit-line-clamp: 2;
+  /* 控制 列的方向 */
+  -webkit-box-orient: vertical;
+}
+.list {
+  font-size: 36rpx;
+  font-weight: 500;
+  color: #434343;
+  margin: 38rpx 0;
+  text-align: center;
+}
+.none {
+  padding-bottom: 120rpx;
+}
+.footer {
+  height: 94rpx;
+  width: 750rpx;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  background-color: #fff;
+}
+.footer .footer_kefu,
+.footer .footer_cart {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 25rpx;
+}
+.footer .footer_kefu .icon-gouwuche-01,
+.footer .footer_cart .icon-gouwuche-01,
+.footer .footer_kefu .icon-service,
+.footer .footer_cart .icon-service {
+  font-size: 40rpx;
+}
+.footer .footer_join,
+.footer .footer_buy {
+  background-color: #fcaa23;
+  width: 196rpx;
+  height: 60rpx;
+  line-height: 60rpx;
+  color: #fff;
+  border-radius: 30rpx;
+  text-align: center;
+  font-size: 26rpx;
+}
+.footer .footer_buy {
+  background-color: #ea4350;
+}
