--- a/pages/search/index.wxml
+++ b/pages/search/index.wxml
@@ -1,2 +1,5 @@
-<!--pages/search/index.wxml-->
-<text>pages/search/index.wxml</text>
+<view class="nav">
+  <input class="search" placeholder="输入商品名" />
+  <icon type="search"></icon>
+  <button class="btn" size="mini">搜索</button>
+</view>
