--- a/pages/goods_detail/index.less
+++ b/pages/goods_detail/index.less
@@ -8,24 +8,40 @@
 .price {
   display: flex;
   justify-content: space-between;
-  padding: 19rpx 37rpx;
+  align-items: center;
+  padding: 19rpx 37rpx 0;
   .price_left {
     color: var(--publicColor);
     font-size: 36rpx;
+    &::before {
+      content: "¥";
+      font-size: 85%;
+    }
   }
   .price_right {
+    display: flex;
     .icon-icon-test,
     .icon-shoucang {
       color: #707070;
       font-size: 60rpx;
+      position: relative;
+    }
+    .share {
+      opacity: 0;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      padding: 0;
     }
     .icon-shoucang {
-      margin-left: 46rpx;
+      margin-left: 15rpx;
     }
   }
 }
 .title {
-  padding: 0 33rpx;
+  padding: 33rpx;
   font-size: 30rpx;
   color: #434343;
   line-height: 42rpx;
