--- a/pages/cart/index.less
+++ b/pages/cart/index.less
@@ -3,32 +3,31 @@
   align-items: center;
   justify-content: space-between;
   padding: 18rpx 25rpx;
+  position: relative;
   .rad {
     width: 35rpx;
     height: 35rpx;
     padding-right: 35rpx;
   }
-  .list {
-    flex: 1;
+  .count {
+    position: absolute;
+    bottom: 40rpx;
+    right: 37rpx;
     display: flex;
-    .list_img,
-    .default_img {
-      width: 191rpx;
-      height: 191rpx;
-      margin: 10rpx 0;
+    align-items: center;
+    color: #8a8a8a;
+    .reduce,
+    .add {
+      width: 32rpx;
+      height: 32rpx;
+      line-height: 28rpx;
+      text-align: center;
+      border-radius: 50%;
+      border: 2rpx solid #8a8a8a;
     }
-    .list_right {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      margin-left: 29rpx;
-      font-size: 24rpx;
-      color: #434343;
-      padding: 27rpx 0;
-      .price {
-        color: var(--publicColor);
-      }
+    .num {
+      margin: 0 32rpx;
+      font-size: 30rpx;
     }
   }
 }
