--- a/pages/cart/index.wxss
+++ b/pages/cart/index.wxss
@@ -3,34 +3,33 @@
   align-items: center;
   justify-content: space-between;
   padding: 18rpx 25rpx;
+  position: relative;
 }
 .goods .rad {
   width: 35rpx;
   height: 35rpx;
   padding-right: 35rpx;
 }
-.goods .list {
-  flex: 1;
+.goods .count {
+  position: absolute;
+  bottom: 40rpx;
+  right: 37rpx;
   display: flex;
+  align-items: center;
+  color: #8a8a8a;
 }
-.goods .list .list_img,
-.goods .list .default_img {
-  width: 191rpx;
-  height: 191rpx;
-  margin: 10rpx 0;
+.goods .count .reduce,
+.goods .count .add {
+  width: 32rpx;
+  height: 32rpx;
+  line-height: 28rpx;
+  text-align: center;
+  border-radius: 50%;
+  border: 2rpx solid #8a8a8a;
 }
-.goods .list .list_right {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-left: 29rpx;
-  font-size: 24rpx;
-  color: #434343;
-  padding: 27rpx 0;
-}
-.goods .list .list_right .price {
-  color: var(--publicColor);
+.goods .count .num {
+  margin: 0 32rpx;
+  font-size: 30rpx;
 }
 .footer {
   height: 83rpx;
