--- a/pages/goods_detail/index.less
+++ b/pages/goods_detail/index.less
@@ -65,6 +65,9 @@
 .none {
   padding-bottom: 120rpx;
 }
+.my_img {
+  vertical-align: top;
+}
 .footer {
   height: 94rpx;
   width: 750rpx;
@@ -81,9 +84,19 @@
     justify-content: center;
     align-items: center;
     font-size: 25rpx;
+    position: relative;
     .icon-gouwuche-01,
     .icon-service {
       font-size: 40rpx;
+    }
+    .kefu {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      left: 0;
+      top: 0;
+      padding: 0;
     }
   }
 
