--- a/pages/goods_list/index.wxml
+++ b/pages/goods_list/index.wxml
@@ -7,11 +7,5 @@
   </block>
 </view>
 <block wx:for="{{goodsList}}" wx:key="goods_id">
-  <navigator class="list" url="/pages/goods_detail/index?goods_id={{item.goods_id}}">
-    <image src="{{item.goods_small_logo || '/images/default.png'}} " class="list_img" />
-    <view class="list_right">
-      <view>{{item.goods_name}}</view>
-      <view class="price">¥{{item.goods_price}}</view>
-    </view>
-  </navigator>
+  <goods-item item="{{item}}" />
 </block>
