--- a/components/goods-item/index.less
+++ b/components/goods-item/index.less
@@ -19,5 +19,20 @@
     .price {
       color: var(--publicColor);
     }
+    .list_right_name {
+      // 长英文单词强制换行
+      word-break: break-all;
+      font-size: 24rpx;
+      line-height: 33rpx;
+      height: 66rpx;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      /* 这是一个以前的弹性盒子 */
+      display: -webkit-box;
+      /* 在哪一行显示省略号 */
+      -webkit-line-clamp: 2;
+      /* 控制 列的方向 */
+      -webkit-box-orient: vertical;
+    }
   }
 }
