--- a/pages/auth/index.wxml
+++ b/pages/auth/index.wxml
@@ -1,2 +1,1 @@
-<!--pages/auth/index.wxml-->
-<text>pages/auth/index.wxml</text>
+<button open-type="getUserInfo" type="primary" class="btn" bindgetuserinfo="getInfo">获取用户信息</button>
