--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -1,2 +1,29 @@
-<!--pages/user/index.wxml-->
-<text>pages/user/index.wxml</text>
+<view class="header">
+  <image src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2354681389,420852882&fm=26&gp=0.jpg" class="headerImg" />
+</view>
+<view class="nav">
+  <view class="nav_item">
+    <view class="iconfont icon-daifukuan01"></view>
+    待付款
+  </view>
+  <view class="nav_item">
+    <view class="iconfont icon-daishouhuo-"></view>
+    待收货
+  </view>
+  <view class="nav_item">
+    <view class="iconfont icon-tuikuan"></view>
+    退货/退款
+  </view>
+  <view class="nav_item">
+    <view class="iconfont icon-dingdan"></view>
+    全部订单
+  </view>
+</view>
+<view class="divider"></view>
+<view class="kefu">
+  <button open-type="contact"></button>
+</view>
+<view class="yijian">
+  <button open-type="feedback"></button>
+</view>
+<view class="banben">当前版本</view>
